--- a/hlv68.html
+++ b/hlv68.html
@@ -13,7 +13,7 @@
     <script>
         
         var url = "http://elections.huffingtonpost.com/pollster/api/charts/2016-national-gop-primary";
-        
+        var url2 ="http://elections.huffingtonpost.com/pollster/2016-louisiana-republican-presidential-primary";
         $.ajax(url, {
             dataType: "jsonp",
             jsonpCallback: "pollsterCallback",
